--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,7 @@
   <script src="bower_components/knockoutjs/dist/knockout.js"></script>
   <script src="bower_components/sammy/lib/sammy.js"></script>
   <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
+  <script src="mapbox.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
